# JPC_AV_videoQC

./: .gitignore  JPC_AV_NTSC_MKV.xml  JPCspecs_mi.txt  README.md  av_spex_the_logo.icns  avspex.spec  copyit.py  exiftool_check.py  mediaconch_batch.py  mediainfo_check.py  parse_encoder-settings.py  pyproject.toml  requirements.txt  setup.cfg
AV_Spex/: process_av.py  qct-parse.py  qct-parse_config.txt
AV_Spex/checks/: embed_fixity.py  encoder_settings_check.py  exiftool_check.py  ffprobe_check.py  filename_check.py  fixity_check.py  make_access.py  mediainfo_check.py  qct_parse.py
AV_Spex/utils/: find_config.py  log_setup.py  yaml_profiles.py
JPC_AV/: JPC_AV_00011_mediainfo.txt  deps_setup.py  embed_fixity.py  encoder_settings_check.py  exiftool_check.py  ffprobe_check.py  filename_check.py  find_config.py  fixity_check.py  log_config.py  log_settings.py  log_setup.py  make_access.py  mediainfo_check.py  parse_encoder-settings.py  process_file.py  yaml_profiles.py
app_packaging/: avspex.spec  gui_launcher.py
config/: JPC_AV_01709_mkv.xml  JPC_AV_NTSC_MKV_2024-07-31.xml  JPC_AV_NTSC_MKV_2024-09-20.xml  command_config.yaml  config.yaml
developer_docs/: cli-documentation.md  config-manager-documentation.md  gui-documentation.md
docs/: Roadmap.md
src/AV_Spex/: __init__.py  av_spex_the_file.py  process_av.py  processing_mgmt.py
src/AV_Spex/checks/: __init__.py  embed_fixity.py  encoder_settings_check.py  exiftool_check.py  ffprobe_check.py  filename_check.py  fixity_check.py  make_access.py  mediaconch_check.py  mediainfo_check.py  mediatrace_check.py  qct_parse.py
src/AV_Spex/config/: checks_config.json  filename_config.json  spex_config.json
src/AV_Spex/config/mediaconch_policies/: JPC_AV_NTSC_MKV_2023-11-21.xml  JPC_AV_NTSC_MKV_2025_03_26.xml
src/AV_Spex/gui/: gui_checks_window.py  gui_console_textbox.py  gui_main_window.py  gui_processing_gui.py  gui_signals.py  gui_theme_manager.py
src/AV_Spex/processing/: avspex_processor.py  processing_mgmt.py  run_tools.py  worker_thread.py
src/AV_Spex/utils/: app_runner.py  config_edit.py  config_io.py  config_manager.py  config_setup.py  config_ui.py  deps_setup.py  dir_setup.py  edit_config.py  find_config.py  generate_report.py  gui_checks_window.py  gui_main_window.py  gui_processing_gui.py  gui_setup.py  log_setup.py  main_window.py  run_tools.py  setup_config.py  signals.py  theme_manager.py  tools_processing.py  yaml_profiles.py
tests/: conftest.py  gui_PyQt6.py  gui_testing.py  mainwindow_gui.py  new_guiv2_pyqt6.py  switches_gui_testing.py  test_apply_filename_profile.py  test_av_spex_the_file.py  test_avspex_processor.py  test_config_manager.py  test_exiftool_check.py  test_filename_regrex.py  test_make_color_bars_graphs.py  test_make_color_bars_piecharts.py  test_mediainfo_check.py
