[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AV_Spex"
version = "0.3.2"
description = "A Python project written for NMAAHC media conservation lab"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Eddy Colloton", email="eddy.colloton@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "ruamel.yaml==0.18.6",
    "colorlog==6.7.0",
    "art==6.1"
]

[project.urls]
Repository = "https://github.com/JPC-AV/JPC_AV_videoQC"

[project.scripts]
av-spex = "AV_Spex.av_spex_the_file:main"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["AV_Spex*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["config", "logs", "tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)