[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AV_Spex"
version = "0.7.5"
description = "A Python project written for NMAAHC media conservation lab"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Eddy Colloton", email="eddy.colloton@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "appdirs==1.4.4",
    "colorlog==6.7.0",
    "art==6.1",
    "lxml>=5.2.0",
    "plotly==5.23.0",
    "toml==0.10.2",
    "PyQt6>=6.7.1"
]

[project.urls]
Repository = "https://github.com/JPC-AV/JPC_AV_videoQC"

[project.scripts]
av-spex = "AV_Spex.av_spex_the_file:main_cli"

[project.gui-scripts]
av-spex-gui = "AV_Spex.av_spex_the_file:main_gui"

[tool.setuptools.packages.find]
where = ["src"]
include = ["AV_Spex*"]
exclude = ["tests"]
namespaces = false

[tool.setuptools.package-data]
"AV_Spex" = [
    "config/*.json",
    "config/mediaconch_policies/*.xml",
    "logo_image_files/*.png"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]