[metadata]
name = AV_Spex
version = 0.1.0
author = Eddy Colloton
author_email = eddy.colloton@gmail.com
description = A Python project written for NMAAHC media conservation lab
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU v3
license_file = LICENSE
url = https://example.com/JPC_AV_videoQC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PyYAML==6.0.1
    colorlog==6.7.0
    art==6.1

[options.entry_points]
console_scripts =
    process-av = AV_Spex.process_av:main

[options.packages.find]
exclude =
    tests*
    logs*
